<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meter"
            android:icon="@drawable/ic_taxi"
            android:title="@string/nav_meter" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/nav_map" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/nav_settings" />
    </group>
    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_nav_profile"
                android:title="@string/nav_profile" />
        </menu>
    </item>
</menu>