<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_home"
        android:enabled="true" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_nav_history"
        android:title="@string/nav_history"
        android:enabled="true" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile"
        android:enabled="true" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings"
        android:enabled="true" />

</menu>
